# src/routes/index.js
@@ -1,5 +1,6 @@
 const { Router } = require("express");
 const authRoutes = require("./auth.routes");
+const transactionRoutes = require("./transaction.routes");
 
 const router = Router();
 
@@ -8,5 +9,6 @@ router.get("/health", (req, res) => {
 });
 
 router.use("/auth", authRoutes);
+router.use("/transactions", transactionRoutes);
 
 module.exports = router;
