# src/routes/transaction.routes.js
@@ -1,0 +1,9 @@
+const { Router } = require("express");
+const authMiddleware = require("../middlewares/auth.middleware");
+const transactionController = require("../controllers/transaction.controller");
+
+const transactionRoutes = Router();
+
+transactionRoutes.post("/", authMiddleware, transactionController.create);
+
+module.exports = transactionRoutes;
